# raytracer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: camera.hpp  geometry.hpp  renderer.hpp
src/: camera.cpp  geometry.cpp  main.cpp  renderer.cpp
tests/: test_camera.cpp  test_geometry.cpp  test_stb.cpp
